--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\FLAVIA\Desktop\Cursos em Vídeo TI - Extras\Ícones Pastas\Ícones Python\Cornmanthe3rd-Plex-Other-python.ico,0
+IconResource=C:\Users\FLAVIA\Desktop\Cursos em Vídeo TI - Extras\Ícones Pastas\Git\Papirus-Team-Papirus-Places-Folder-red-git.ico,0
 [ViewState]
 Mode=
 Vid=
